syntax = "proto3";

package elys.assetprofile;

import "gogoproto/gogo.proto";
import "elys/assetprofile/params.proto";
import "elys/assetprofile/entry.proto";

option go_package = "github.com/elys-network/elys/v5/x/assetprofile/types";

// GenesisState defines the assetprofile module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated Entry entry_list = 2 [ (gogoproto.nullable) = false ];
}
